# zhu

./: .gitattributes  .gitignore  .taurignore  ExtensionDEV.md  README.md  README_EN.md  package.json  pnpm-lock.yaml  rspack.config.js  tsconfig.host.json
fastools/: Cargo.toml
fastools/src/: artifacts.rs  main.rs  upsync.rs
src-tauri/: Cargo.toml  Info.ios.plist  build.rs  tauri.conf.json
src-tauri/bundle/linux/: TauriTavern.desktop  com.tauritavern.client.metainfo.xml
src-tauri/capabilities/: default.json  desktop-dialog.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  lib.rs  main.rs
src-tauri/src/app/: bootstrap.rs
src-tauri/src/application/: errors.rs  mod.rs
src-tauri/src/application/dto/: agent_dto.rs  background_dto.rs  bootstrap_dto.rs  character_dto.rs  chat_completion_dto.rs  chat_dto.rs  group_dto.rs  image_metadata_dto.rs  llm_connection_dto.rs  mod.rs  native_regex_dto.rs  preset_dto.rs  provider_metadata_dto.rs  secret_dto.rs  settings_dto.rs  stable_diffusion_dto.rs  theme_dto.rs  tokenization_dto.rs  tts_dto.rs  user_directory_dto.rs  user_dto.rs  world_info_dto.rs
src-tauri/src/application/services/: agent_identity.rs  agent_profile_diagnostic_service.rs  agent_profile_service.rs  agent_run_history_service.rs  agent_run_retention_automation_service.rs  agent_run_retention_planner.rs  agent_runtime_service.rs  agent_tools.rs  agent_workspace_lifecycle_service.rs  agent_workspace_scope.rs  asset_service.rs  avatar_service.rs  background_service.rs  character_service.rs  chat_file_validation.rs  chat_service.rs  content_service.rs  extension_service.rs  extension_store_service.rs  group_chat_service.rs  group_service.rs  image_metadata_service.rs  lan_sync_service.rs  llm_connection_service.rs  mod.rs  native_regex_service.rs  preset_service.rs  prompt_assembly_service.rs  provider_metadata_service.rs  quick_reply_service.rs  secret_service.rs  settings_repair.rs  settings_service.rs  skill_service.rs  stable_diffusion_service.rs  sync_automation_service.rs  theme_service.rs  tokenization_service.rs  translate_service.rs  tt_sync_service.rs  (+5 more)
src-tauri/src/domain/: errors.rs  ios_policy.rs  json_merge.rs  mod.rs  text_metrics.rs  text_search.rs
src-tauri/src/domain/models/: asset.rs  avatar.rs  background.rs  bedrock_model.rs  character.rs  chat.rs  extension.rs  filename.rs  group.rs  image_metadata.rs  lan_sync.rs  llm_connection.rs  mod.rs  preset.rs  quick_reply.rs  secret.rs  settings.rs  skill.rs  sync_automation.rs  theme.rs  tt_sync.rs  update.rs  upstream_failure.rs  user.rs  user_directory.rs  world_info.rs
src-tauri/src/domain/repositories/: agent_invocation_repository.rs  agent_profile_repository.rs  agent_profile_storage_health_repository.rs  agent_run_repository.rs  agent_workspace_lifecycle_repository.rs  asset_repository.rs  avatar_repository.rs  background_repository.rs  character_repository.rs  chat_completion_repository.rs  chat_repository.rs  chat_types.rs  checkpoint_repository.rs  content_repository.rs  extension_repository.rs  extension_store_repository.rs  group_chat_repository.rs  group_repository.rs  image_metadata_repository.rs  llm_connection_repository.rs  mod.rs  preset_repository.rs  prompt_cache_repository.rs  provider_metadata_repository.rs  quick_reply_repository.rs  secret_repository.rs  settings_repository.rs  skill_repository.rs  stable_diffusion_repository.rs  theme_repository.rs  tokenizer_repository.rs  translate_repository.rs  tts_repository.rs  update_repository.rs  user_directory_repository.rs  user_repository.rs  workspace_repository.rs  world_info_repository.rs
src-tauri/src/infrastructure/: apple_webview_js_dialogs.rs  assets.rs  css_compat.rs  data_root_content_dirs.rs  github.rs  http_client.rs  http_client_pool.rs  http_error.rs  ios_document_picker.rs  ios_policy_cache.rs  ios_share_sheet.rs  ios_ui.rs  ios_webview.rs  macos_webview.rs  mod.rs  paths.rs  preset_file_naming.rs  request_path.rs  sillytavern_sorting.rs  sync_automation_store.rs  sync_bundle.rs  sync_fs.rs  sync_transfer.rs  sync_v2.rs  third_party_assets.rs  third_party_paths.rs  thumbnails.rs  user_data_dirs.rs  user_data_paths.rs  webview_js_dialogs_contract_tests.rs  zipkit.rs
src-tauri/src/infrastructure/apis/: endpoint_url.rs  github_update_repository.rs  http_provider_metadata_repository.rs  http_stable_diffusion_repository.rs  http_translate_repository.rs  http_tts_repository.rs  miktik_tokenizer_repository.rs  mod.rs  workers_ai_endpoint.rs  workers_ai_models.rs
src-tauri/src/infrastructure/lan_sync/: client.rs  crypto.rs  manifest.rs  mod.rs  paths.rs  runtime.rs  server.rs  store.rs
src-tauri/src/infrastructure/logging/: dev_bundle.rs  devtools.rs  llm_api_logs.rs  logger.rs  mod.rs
src-tauri/src/infrastructure/persistence/: chat_format_importers.rs  data_archive_jobs.rs  file_system.rs  jsonl_utils.rs  mod.rs  png_utils.rs  thumbnail_cache.rs
src-tauri/src/infrastructure/repositories/: chat_directory_identity.rs  file_asset_repository.rs  file_avatar_repository.rs  file_background_repository.rs  file_content_repository.rs  file_extension_repository.rs  file_extension_store_repository.rs  file_group_repository.rs  file_image_metadata_repository.rs  file_preset_repository.rs  file_prompt_cache_repository.rs  (+8 more)
src-tauri/src/presentation/: errors.rs  windows_tray.rs
(+917 files in other folders)
