[package]
name = "fastools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.43"
colored = "3.1.1"
dialoguer = "0.12.0"
indicatif = "0.18.4"
which = "8.0.0"
sysinfo = "0.33"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
regex = "1.12.3"
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.50"
