[package]
name = "tauritavern"
version = "2.1.1"
description = "SillyTavern backend rebuilt with Tauri and Rust"
authors = ["TauriTavern Team"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauritavern_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2.10.2", features = ["macos-private-api", "protocol-asset", "tray-icon"] }
tauri-plugin-barcode-scanner = "2.4.4"
tauri-plugin-opener = "2.5.3"
tauri-plugin-fs = "2.4.5"
tauri-plugin-notification = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "std"] }
tracing-appender = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
tokio = { version = "1", default-features = false, features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", default-features = false, features = ["io"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.29", default-features = false, features = ["handshake"] }
reqwest = { version = "0.13", default-features = false, features = ["http2", "json", "multipart", "query", "rustls", "socks", "stream"] }
bytes = "1"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
rand = "0.9"
yup-oauth2 = { version = "12.1.2", default-features = false, features = ["hyper-rustls", "aws-lc-rs", "service-account"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
uuid = { version = "1.4", default-features = false, features = ["serde", "std", "v4"] }
async-trait = "0.1"
url = "2.4"
percent-encoding = "2"
regress = "0.11.1"
icu_collator = "2.1.1"
icu_locale_core = "2.1.1"
sys-locale = "0.3.2"
zip = { version = "8", default-features = false, features = ["deflate-flate2-zlib-rs"] }
tar = { version = "0.4", default-features = false }
typed-path = "0.12"
image = { version = "0.24", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "webp"] }
mime_guess = "2.0.5"
flate2 = "1.1.9"
crc32fast = "1"
filetime = "0.2"
miktik = { version = "0.2.0", default-features = false, features = ["openai", "huggingface", "sentencepiece"] }
axum = { version = "0.8", default-features = false, features = ["http1", "http2", "json", "multipart", "query", "tokio"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
local-ip-address = "0.6"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
rustls = "0.23"
webpki-roots = "1"
dunce = "1"

# TT-Sync v2 shared protocol crates. (crates.io)
ttsync-contract = "2"
ttsync-core = "2"
ttsync-http = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-dialog = "2.7.0"
tauri-plugin-window-state = "2.4.1"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
hyper-util = { version = "0.1", default-features = false, features = ["client-legacy", "http1", "http2", "tokio"] }

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6.4"
block2 = "0.6.2"
objc2-uniform-type-identifiers = { version = "0.3.2", default-features = false, features = ["std", "UTType"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSArray", "NSError", "NSFileManager", "NSString", "NSURL"] }
objc2-ui-kit = { version = "0.3.2", default-features = false, features = ["std", "block2", "objc2-core-foundation", "objc2-uniform-type-identifiers", "UIActivity", "UIActivityViewController", "UIAlertController", "UIControl", "UIDocumentPickerViewController", "UIPopoverPresentationController", "UIPresentationController", "UIResponder", "UIScrollView", "UITextField", "UIView", "UIViewController", "UIWindow", "UIGeometry"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
block2 = "0.6.2"
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSArray", "NSError", "NSString", "NSGeometry", "objc2-core-foundation"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
portable = []

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = "symbols"
